tests/specs/check/wasm_component/check.out
Check [WILDCARD]main.ts
TS2322 [ERROR]: Type 'string' is not assignable to type 'number'.
const displayName: number = result.tag === "found"
      ~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:4:7

TS2345 [ERROR]: Argument of type 'string' is not assignable to parameter of type 'Uint8Array<ArrayBufferLike>'.
encode("not bytes");
       ~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:7:8

Found 2 errors.

error: Type checking failed.
